--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,9 @@ canvas {
     padding:15px;
     width: 100%;
 }
+.hint {
+    max-width: 100%;
+}
 @media only screen and (min-width: 1200px) {
     .hangmanHeader {
         font-size: 60px;
