--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@
     border: 3px dotted #4688f1;
     font-family: 'Kreon', serif;
     line-height: 30px;
-    overflow: hidden;
+    overflow: auto;
     height: 600px;
     text-shadow:
         -0.5px -0.5px 0 #4688f1,
